--- a/process-compose.yml
+++ b/process-compose.yml
@@ -1,9 +1,33 @@
 version: "0.5"
+
 is_strict: true
 
 processes:
   flask:
-   command: flask --app main run --debug
+   command: flask --app main run
    working_dir: ./app
+   environment:
+    - 'FLASK_APP=main'
+    - 'FLASK_DEBUG=True'
+  #  depends_on:
+  #    db:
+  #      condition: "process_started"
    availability:
-    restart: "always"
+    restart: "on_failure"
+    backoff_seconds: 5    # default: 1
+    # max_restarts: 10    # default: 0 (unlimited)
+
+  # TODO: debug
+  # db:
+  #   command: >
+  #     docker run -it --rm \
+  #       --name "${NAME?}" \
+  #       -e POSTGRES_PASSWORD="${POSTGRES_PASSWORD?}" \
+  #       -p "${PORT:-5432}:5432" \
+  #       postgres:16.3-alpine3.20
+  #   environment:
+  #     - 'NAME=devbox-postgres'
+  #     - 'POSTGRES_PASSWORD=postgres'
+  #   is_tty: true
+  #   shutdown:
+  #     command: "docker stop devbox-postgres"
