--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ package-mode = false
 [tool.poetry.dependencies]
 python = ">=3.11,<3.13"
 flask = "^3.0.3"
+flask-sqlalchemy = "^3.1.1"
+psycopg2-binary = "^2.9.9"
 
 [tool.poetry.group.dev.dependencies]
 coverage = "^7.5.3"
