--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python = ">=3.11,<3.13"
 flask = "^3.0.3"
 flask-sqlalchemy = "^3.1.1"
 psycopg2-binary = "^2.9.9"
+python-decouple = "^3.8"
 
 [tool.poetry.group.dev.dependencies]
 coverage = "^7.5.3"
