--- a/process-compose.yml
+++ b/process-compose.yml
@@ -17,17 +17,21 @@ processes:
     backoff_seconds: 5    # default: 1
     # max_restarts: 10    # default: 0 (unlimited)
 
-  # TODO: debug
-  # db:
-  #   command: >
-  #     docker run -it --rm \
-  #       --name "${NAME?}" \
-  #       -e POSTGRES_PASSWORD="${POSTGRES_PASSWORD?}" \
-  #       -p "${PORT:-5432}:5432" \
-  #       postgres:16.3-alpine3.20
-  #   environment:
-  #     - 'NAME=devbox-postgres'
-  #     - 'POSTGRES_PASSWORD=postgres'
-  #   is_tty: true
-  #   shutdown:
-  #     command: "docker stop devbox-postgres"
+  # TODO: debug missing env vars
+  # ! POSTGRES_PASSWORD
+  db:
+    command: >
+      docker run -it --rm \
+        --name "${DB_NAME?}" \
+        -e POSTGRES_DB="${DB_NAME?}" \
+        -e POSTGRES_USER="${DB_USER?}" \
+        -e POSTGRES_PASSWORD="${DB_PASS:-postgres}" \
+        -p "${DB_PORT:-5432}:5432" \
+        postgres:16.3-alpine3.20
+    environment:
+      - 'DB_NAME=postgres'
+      - 'DB_USER=postgres'
+      - 'DB_PASS=postgres'
+    is_tty: true
+    shutdown:
+      command: "docker stop devbox-postgres"
