chore: update deps

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ itsdangerous==2.2.0 ; python_version >= "3.11" and python_version < "3.13"
 jinja2==3.1.4 ; python_version >= "3.11" and python_version < "3.13"
 markupsafe==2.1.5 ; python_version >= "3.11" and python_version < "3.13"
 psycopg2-binary==2.9.9 ; python_version >= "3.11" and python_version < "3.13"
+python-decouple==3.8 ; python_version >= "3.11" and python_version < "3.13"
 sqlalchemy==2.0.30 ; python_version >= "3.11" and python_version < "3.13"
 typing-extensions==4.12.2 ; python_version >= "3.11" and python_version < "3.13"
 werkzeug==3.0.3 ; python_version >= "3.11" and python_version < "3.13"
