--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ pytest = "^8.2.1"
 pytest-asyncio = "^0.23.3"
 pytest-cov = "^5.0.0"
 pytest-datafiles = "^3.0.0"
+pytest-flask = "^1.3.0"
 pytest-xdist = "^3.6.1"
 rich = "^13.7.1"
 ruff = "^0.4.1"
