--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
 blinker==1.8.2 ; python_version >= "3.11" and python_version < "3.13"
 click==8.1.7 ; python_version >= "3.11" and python_version < "3.13"
-colorama==0.4.6 ; python_version >= "3.11" and python_version < "3.13" and platform_system == "Windows"
+colorama==0.4.6 ; python_version >= "3.11" and python_version < "3.13" and (sys_platform == "win32" or platform_system == "Windows")
 flask-sqlalchemy==3.1.1 ; python_version >= "3.11" and python_version < "3.13"
 flask==3.0.3 ; python_version >= "3.11" and python_version < "3.13"
 greenlet==3.0.3 ; python_version >= "3.11" and python_version < "3.13" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32")
+iniconfig==2.0.0 ; python_version >= "3.11" and python_version < "3.13"
 itsdangerous==2.2.0 ; python_version >= "3.11" and python_version < "3.13"
 jinja2==3.1.4 ; python_version >= "3.11" and python_version < "3.13"
 markupsafe==2.1.5 ; python_version >= "3.11" and python_version < "3.13"
+packaging==24.1 ; python_version >= "3.11" and python_version < "3.13"
+pluggy==1.5.0 ; python_version >= "3.11" and python_version < "3.13"
 psycopg2-binary==2.9.9 ; python_version >= "3.11" and python_version < "3.13"
+pytest-flask==1.3.0 ; python_version >= "3.11" and python_version < "3.13"
+pytest==8.2.2 ; python_version >= "3.11" and python_version < "3.13"
 python-decouple==3.8 ; python_version >= "3.11" and python_version < "3.13"
 sqlalchemy==2.0.30 ; python_version >= "3.11" and python_version < "3.13"
 typing-extensions==4.12.2 ; python_version >= "3.11" and python_version < "3.13"
