--- a/process-compose.yml
+++ b/process-compose.yml
@@ -13,9 +13,9 @@ processes:
      db:
        condition: "process_healthy"
    availability:
-    restart: "on_failure"
+    restart: "always"
     backoff_seconds: 3  # default: 1
-    max_restarts: 5     # default: 0 (unlimited)
+    max_restarts: 0     # default: 0 (unlimited)
 
   db:
     command: >
