--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-DATABASE_NAME=
-DATABASE_URL=
-DATABASE_USER=
-DATABASE_PASSWORD=
-DATABASE_PORT=
+CONTAINER_NAME=devbox-postgres
+DB_URL=localhost
+DB_NAME=postgres
+DB_USER=postgres
+DB_PASS=postgres
+DB_PORT=5432
